appId: dev.okazakee.pearlift
---
- launchApp:
    stopApp: false
- scrollUntilVisible:
    element:
      id: exercise.exercise-1-2.delete
    direction: DOWN
    timeout: 15000
    visibilityPercentage: 100
    centerElement: true
- tapOn:
    id: exercise.exercise-1-2.delete
- extendedWaitUntil:
    visible:
      id: prompt.action.destructive
    timeout: 10000
- tapOn:
    id: prompt.action.destructive
- assertNotVisible: Squat
